Add latest snapshot JARs. Update project to work with JARs Add MVP for multisignature Fix issues with api. Add mint endpoint with default. Fix mint